--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -3,6 +3,17 @@ body {
 
 }
 
+.mydropdown {
+    padding: 0px !important;
+    font-size: 14px !important;
+}
+
+.openModalButton {
+    background-color: grey;
+    color: white;
+    font-size: 12px;
+}
+
 
 table, thead, td, tr {
     border: 1px solid;
@@ -17,12 +28,10 @@ tr:nth-child(even) {
 
 .container {
     width: 100%;
-
-
 }
 
 .block {
     width: 100px;
     display: inline-block;
-
 }
+
