--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -1,149 +1,145 @@
-<body>
-    @using AsignioInternship.Data.CombinedLogException
-    @using AsignioInternship.Data
+
+@using AsignioInternship.Data.CombinedLogException
+@using AsignioInternship.Data
 
 
-    @model PagedDataModelCollection<CombinedLogExceptionDataModel>
-    @{
-        ViewBag.Title = "Index";
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    @{
-        var searchBy = Model.SearchBy;
-        var searchInput = Model.SearchInput;
-        var sortBy = Model.SortBy;
-        var id = Model.PageNumber;
+@model PagedDataModelCollection<CombinedLogExceptionDataModel>
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+@{
+    var searchBy = Model.SearchBy;
+    var searchInput = Model.SearchInput;
+    var sortBy = Model.SortBy;
+    var id = Model.PageNumber;
 
-        bool noResults = (Model.TotalItems) == 0;
+    bool noResults = (Model.TotalItems) == 0;
 
-        List<SelectListItem> listItems = new List<SelectListItem>();
-        listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
-        listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
-        listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
+    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
 
-        List<SelectListItem> searchCategories = new List<SelectListItem>();
-        searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
-        searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
-        searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
-        searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
-        searchCategories.Add(new SelectListItem { Text = "Source", Value = "Source" });
-        searchCategories.Add(new SelectListItem { Text = "Stack Trace", Value = "StackTrace" });
-    }
+    List<SelectListItem> searchCategories = new List<SelectListItem>();
+    searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
+    searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
+    searchCategories.Add(new SelectListItem { Text = "Source", Value = "Source" });
+    searchCategories.Add(new SelectListItem { Text = "Stack Trace", Value = "StackTrace" });
+}
 
-    @using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
-    {
-        <div class="container">
-            <div class="block" style="width: 20% !important; display: inline;">
-                @Html.Label("Sort by: ")
-                @Html.DropDownList("sortBy", listItems)
-            </div>
-            <div class="block" style="width: 20% !important; display: inline;">
-                @Html.Label("Search by: ")
-                @Html.DropDownList("searchBy", searchCategories)
-            </div>
-            <div class="block" style="width: 20% !important; display: inline;">
-                @Html.Label("*Search for: ")
-                @Html.TextBox("searchInput")
-            </div>
-            <div class="block" style="width: 20% !important; display: inline;">
-                @Html.Label("Page: ")
-                @Html.TextBox("id")
-            </div>
-            <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline;" />
+@using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
+{
+    <div class="container" style="padding-top: 50px !important;">
+        <div class="block" style="width: 20% !important; display: inline-block;">
+            @Html.Label("Sort by: ", new { @class = "mydropdown" })
+            @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
         </div>
-    }
-    *If searching by TimeStamp, make sure the format is YYYY-MM-DD
-
-    <div>
-        @Html.ActionLink(linkText: "Previous",
-                            actionName: "Index",
-                            controllerName: "LogException",
-                            routeValues: new
-                                {
-                                    sortBy = sortBy,
-                                    searchBy = searchBy,
-                                    searchInput = searchInput,
-                                    id = ((id - 1) != 0) ? (id - 1) : id
-                                },
-                            htmlAttributes: null)
+        <div class="block" style="width: 20% !important; display: inline-block; ">
+            @Html.Label("Search by: ", new { @class = "mydropdown" })
+            @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
+        </div>
+        <div class="block" style="width: 20% !important; display: inline-block; ">
+            @Html.Label("*Search for: ", new { @class = "mydropdown" })
+            @Html.TextBox("searchInput", null, new { @class = "mydropdown" })
+        </div>
+        <div class="block" style="width: 20% !important; display: inline-block; ">
+            @Html.Label("Page: ", new { @class = "mydropdown" })
+            @Html.TextBox("id", null, new { @class = "mydropdown" })
+        </div>
+        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline-block;" />
     </div>
-    <div>
-        @Html.ActionLink(linkText: "Next",
-                            actionName: "Index",
-                            controllerName: "LogException",
-                            routeValues: new
-                                {
-                                    sortBy = sortBy,
-                                    searchBy = searchBy,
-                                    searchInput = searchInput,
-                                    id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
-                                },
-                            htmlAttributes: null)
-    </div>
+}
+*If searching by TimeStamp, make sure the format is YYYY-MM-DD
 
-    <div>
-        Current Page: @Model.PageNumber/@Model.TotalPages
-    </div>
+<div>
+    @Html.ActionLink(linkText: "Previous",
+                        actionName: "Index",
+                        controllerName: "LogException",
+                        routeValues: new
+                            {
+                                sortBy = sortBy,
+                                searchBy = searchBy,
+                                searchInput = searchInput,
+                                id = ((id - 1) != 0) ? (id - 1) : id
+                            },
+                        htmlAttributes: null)
+</div>
+<div>
+    @Html.ActionLink(linkText: "Next",
+                        actionName: "Index",
+                        controllerName: "LogException",
+                        routeValues: new
+                            {
+                                sortBy = sortBy,
+                                searchBy = searchBy,
+                                searchInput = searchInput,
+                                id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
+                            },
+                        htmlAttributes: null)
+</div>
 
-    @if (!noResults)
-    {
-        <table style="width:100%; text-align:center;">
-            <thead>
+<div>
+    Current Page: @Model.PageNumber/@Model.TotalPages
+</div>
+
+@if (!noResults)
+{
+    <table style="width:100%; text-align:center;">
+        <thead>
+            <tr>
+                <td>Email Address</td>
+                <td>Time Stamp</td>
+                <td>Web Request ID</td>
+                <td>Message</td>
+                <td>Method Name</td>
+                <td>Source</td>
+                <td>Stack Trace</td>
+                <td>Important</td>
+                <td>Mark as Important</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
+            {
                 <tr>
-                    <td>Email Address</td>
-                    <td>Time Stamp</td>
-                    <td>Web Request ID</td>
-                    <td>Message</td>
-                    <td>Method Name</td>
-                    <td>Source</td>
-                    <td>Stack Trace</td>
-                    <td>Important</td>
-                    <td>Mark as Important</td>
-                    <td>Mark as Important - modal</td>
+                    <td>@currentRow.EmailAddress</td>
+                    <td>@currentRow.TimeStamp</td>
+                    <td>@currentRow.WebRequestID</td>
+                    <td>@currentRow.Message</td>
+                    <td>@currentRow.MethodName</td>
+                    <td>@currentRow.Source</td>
+                    <td>@currentRow.StackTrace</td>
+                    <td>@currentRow.Important</td>
+                    <td>
+                        <button class="openModalButton" onclick="openModal('@currentRow.UserID.ToString()', '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()', '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()', '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')">
+                            Click me to mark as important
+                        </button>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
-                {
-                    <tr>
-                        <td>@currentRow.EmailAddress</td>
-                        <td>@currentRow.TimeStamp</td>
-                        <td>@currentRow.WebRequestID</td>
-                        <td>@currentRow.Message</td>
-                        <td>@currentRow.MethodName</td>
-                        <td>@currentRow.Source</td>
-                        <td>@currentRow.StackTrace</td>
-                        <td>@currentRow.Important</td>
-                        <td>@Html.ActionLink("Mark as Important", "MarkAsImportant", currentRow)</td>
-                        <td>
-                            <button class="openModalButton" onclick="openModal('@currentRow.UserID.ToString()', '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()', '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()', '@currentRow.MethodName.ToString()', '@currentRow.Source.ToString()', '@currentRow.StackTrace.ToString()')">
-                                Click me to mark as important
-                            </button>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <h2> No results found. </h2>
-    }
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <h2> No results found. </h2>
+}
 
-    <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
-        This is where a user will enter their email address
+<div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
+    <form id="usernameForm">
+        Your Email: <input type="text" name="usernameEntry" />
+        <button onclick="UpdateImportance()">Update</button>
+    </form>
+    <button onclick="closeModal()">Cancel</button>
+</div>
 
-        <form id="usernameForm">
-            Your Email: <input type="text" name="usernameEntry" />
-            <button onclick="UpdateImportance()">Update</button>
-        </form>
-        <button onclick="closeModal()">Cancel</button>
-    </div>
-</body>
 
 @section scripts
 {
